--- a/index.html
+++ b/index.html
@@ -108,11 +108,12 @@ max-height:80vh;overflow:auto;
 <div class="wrap">
 <div class="card">
 
-<header class="hero">
+<!-- HERO -->
+<header class="hero" role="banner" aria-label="Apresentação do profissional">
 <div>
 <h1>Maycon Barboza</h1>
-<div class="lead">Psicólogo, Psicanalista e Educador Clínico — 14+ mil atendimentos desde 2016.</div>
-<div class="meta"><strong>CRP 01/21617</strong> · Atendimento online e presencial</div>
+<div class="lead">Psicólogo, Psicanalista e Educador Clínico — Clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.</div>
+<div class="meta"><strong>CRP 01/21617</strong> · Atendimento presencial e online · +14.000 atendimentos</div>
 
 <div class="badges">
 <span class="badge">Psicanálise Clínica</span>
@@ -207,3 +208,4 @@ load('g1',hero);load('g2',side);load('g3',g3);
 </script>
 </body>
 </html>
+
