--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ font-family:var(--serif);line-height:1.62;-webkit-font-smoothing:antialiased;
 .wrap{max-width:var(--maxw);margin:20px auto;padding:20px}
 .card{background:var(--card);border-radius:var(--radius);padding:26px;box-shadow:0 10px 30px rgba(0,0,0,0.06)}
 
+/* HERO -------------------------------------------------- */
 .hero{
 display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center;
 }
@@ -46,6 +47,7 @@ object-fit:cover;object-position:center top;
 box-shadow:0 12px 30px rgba(0,0,0,0.08);
 }
 
+/* SEÇÕES ------------------------------------------------ */
 .section{margin-top:22px}
 h2{color:var(--primary);margin:0 0 8px;font-size:1.12rem}
 
@@ -55,6 +57,7 @@ width:320px;height:260px;object-fit:cover;object-position:center top;
 border-radius:10px;box-shadow:0 8px 18px rgba(0,0,0,0.06);
 }
 
+/* GALERIA ---------------------------------------------- */
 .gallery{
 display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:14px;
 }
@@ -63,11 +66,13 @@ width:100%;height:250px;border-radius:12px;overflow:hidden;background:#f0eeeb;
 display:flex;align-items:center;justify-content:center;
 }
 .gimg img{
-width:100%;height:100%;object-fit:cover;
-object-position:center 18%; /* AJUSTE FINAL PARA MOSTRAR ROSTO */
+width:100%;height:100%;
+object-fit:cover;
+object-position:center 18%; /* desktop: rosto + quadro equilibrados */
 display:block;
 }
 
+/* E-BOOK ------------------------------------------------ */
 .ebook object{
 width:100%;height:480px;border-radius:10px;border:1px solid rgba(0,0,0,0.06);background:#fff;
 }
@@ -77,6 +82,7 @@ display:inline-block;padding:10px 16px;border-radius:8px;
 background:var(--primary);color:#fff;text-decoration:none;font-weight:600;font-size:0.95rem;
 }
 
+/* RODAPÉ & MODAL --------------------------------------- */
 footer{margin-top:28px;text-align:center;font-size:0.95rem}
 .small-muted{color:var(--muted);font-size:0.95rem}
 
@@ -91,6 +97,7 @@ max-height:80vh;overflow:auto;
 }
 .modal h3{margin-top:0;color:var(--primary)}
 
+/* RESPONSIVO ------------------------------------------- */
 @media (max-width:980px){
 .hero{grid-template-columns:1fr;gap:18px}
 .hero-photo{height:40vh}
@@ -100,7 +107,11 @@ max-height:80vh;overflow:auto;
 }
 
 @media (max-width:768px){
-.ebook object{display:none;}
+.ebook object{display:none;} /* no celular, só botão */
+.gimg img{
+object-fit:contain; /* no celular NÃO corta rosto/quadro */
+object-position:center center;
+}
 }
 </style>
 </head>
@@ -109,11 +120,15 @@ max-height:80vh;overflow:auto;
 <div class="card">
 
 <!-- HERO -->
-<header class="hero" role="banner" aria-label="Apresentação do profissional">
+<header class="hero">
 <div>
 <h1>Maycon Barboza</h1>
-<div class="lead">Psicólogo, Psicanalista e Educador Clínico — Clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.</div>
-<div class="meta"><strong>CRP 01/21617</strong> · Atendimento presencial e online · +14.000 atendimentos</div>
+<div class="lead">
+Psicólogo, Psicanalista e Educador Clínico — Clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.
+</div>
+<div class="meta">
+CRP 01/21617 · Atendimento presencial e online · +14.000 atendimentos
+</div>
 
 <div class="badges">
 <span class="badge">Psicanálise Clínica</span>
@@ -121,41 +136,55 @@ max-height:80vh;overflow:auto;
 <span class="badge">Supervisão Clínica</span>
 </div>
 </div>
-<img id="heroImg" class="hero-photo" src="">
+<img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
 </header>
 
+<!-- QUEM É -->
 <section class="section">
 <h2>Quem é Maycon</h2>
-<p class="muted"><strong>Brasiliense. Pai. Estudioso.</strong> Atuação clínica desde 2016 em vínculos, sexualidade, lutos e transtornos de humor.</p>
+<p class="muted">
+<strong>Brasiliense. Pai. Estudioso.</strong> Atuação clínica desde 2016 em vínculos, sexualidade, lutos e transtornos de humor.
+</p>
 </section>
 
+<!-- COMO TRABALHA -->
 <section class="section two-col">
 <div>
 <h2>Como trabalha</h2>
-<p class="muted">Escuta profunda, ética e singular. Integra técnicas como hipnoterapia quando clinicamente indicado.</p>
+<p class="muted">
+Escuta profunda, ética e singular. Integra técnicas como hipnoterapia quando clinicamente indicado.
+</p>
 </div>
-<img id="sideImg" class="side-photo" src="">
+<img id="sideImg" class="side-photo" src="" alt="Maycon em atendimento">
 </section>
 
+<!-- E-BOOK -->
 <section class="section">
 <h2>E-book da Formação</h2>
-<p class="muted">Visão geral da formação livre em Psicanálise Clínica (39 meses — Instituto LivreMent).</p>
+<p class="muted">
+Visão geral da formação livre em Psicanálise Clínica (39 meses — Instituto LivreMent).
+</p>
 
 <div class="ebook">
-<object id="ebookObject" data="pdf/ebook.pdf" type="application/pdf"></object>
+<!-- embed para desktop -->
+<object id="ebookObject" data="ebook.pdf" type="application/pdf"></object>
 
+<!-- botão para desktop + celular -->
 <div class="ebook-actions">
-<a id="ebookLinkBtn" class="ebook-link-btn" href="pdf/ebook.pdf" target="_blank">📄 Abrir e-book (tela cheia)</a>
+<a id="ebookLinkBtn" class="ebook-link-btn" href="ebook.pdf" target="_blank" rel="noopener">
+📄 Abrir e-book (tela cheia)
+</a>
 </div>
 </div>
 </section>
 
+<!-- GALERIA -->
 <section class="section">
 <h2>Imagens</h2>
 <div class="gallery">
-<div class="gimg"><img id="g1"></div>
-<div class="gimg"><img id="g2"></div>
-<div class="gimg"><img id="g3"></div>
+<div class="gimg"><img id="g1" alt="Maycon foto 1"></div>
+<div class="gimg"><img id="g2" alt="Maycon foto 2"></div>
+<div class="gimg"><img id="g3" alt="Maycon foto 3"></div>
 </div>
 </section>
 
@@ -166,46 +195,78 @@ max-height:80vh;overflow:auto;
 </footer>
 </div>
 
+<!-- MODAL PRIVACIDADE -->
 <div id="modalBackdrop" class="modal-backdrop"></div>
 <div id="privacyModal" class="modal">
-<button id="closeModal" style="position:absolute;right:12px;top:8px;font-size:1.1rem;border:none;background:none">✕</button>
+<button id="closeModal" style="position:absolute;right:12px;top:8px;font-size:1.1rem;border:none;background:none;cursor:pointer">✕</button>
 <h3>Política de Privacidade</h3>
-<p class="muted">Uso apenas para atendimento ou retorno solicitado. Nenhum dado é vendido ou compartilhado.</p>
+<p class="muted">Os dados informados são utilizados apenas para contato e retorno de mensagens. Não são vendidos ou compartilhados com terceiros.</p>
 </div>
 
-<!-- Watson Yara -->
+<!-- YARA (Watson Assistant) -->
 <script>
 window.watsonAssistantChatOptions={
 integrationID:"6f4c306d-a746-496f-b2c1-0ecf69b69af3",
 region:"us-south",
 serviceInstanceID:"99b8a9c7-7e40-4178-965d-4b0ded28035a",
 onLoad:async(i)=>{await i.render();
-if(window.innerWidth>900){setTimeout(()=>{try{i.openWindow();}catch(e){}},2000);}
+if(window.innerWidth>900){ // só abre automático em telas maiores
+setTimeout(()=>{try{i.openWindow();}catch(e){}},2000);
+}
 }
 };
-setTimeout(()=>{const t=document.createElement('script');
+setTimeout(()=>{
+const t=document.createElement('script');
 t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/latest/WatsonAssistantChatEntry.js";
 document.head.appendChild(t);
 },0);
 </script>
 
-<!-- Imagens e PDF -->
+<!-- Imagens -->
 <script>
-const hero=['images/maycon-1.jpg','maycon-1.jpg'];
-const side=['images/maycon-2.jpg','maycon-2.jpg'];
-const g3=['images/maycon-3.jpg','maycon-3.jpg'];
+const heroImgs=['images/maycon-1.jpg','maycon-1.jpg'];
+const sideImgs=['images/maycon-2.jpg','maycon-2.jpg'];
+const g3Imgs =['images/maycon-3.jpg','maycon-3.jpg'];
 
-function load(id,arr){
-const img=document.getElementById(id);let i=0;
-(function next(){if(i>=arr.length)return;
-const t=new Image();const url=arr[i++];
-t.onload=()=>img.src=url;
-t.onerror=next;t.src=url;
+function loadImage(id, arr){
+const el=document.getElementById(id);
+let i=0;
+(function next(){
+if(!el || i>=arr.length) return;
+const test=new Image();
+const url=arr[i++];
+test.onload=()=>{el.src=url;};
+test.onerror=next;
+test.src=url;
 })();
 }
-load('heroImg',hero);load('sideImg',side);
-load('g1',hero);load('g2',side);load('g3',g3);
+
+loadImage('heroImg', heroImgs);
+loadImage('sideImg', sideImgs);
+loadImage('g1', heroImgs);
+loadImage('g2', sideImgs);
+loadImage('g3', g3Imgs);
+
+// Modal privacidade
+const modal=document.getElementById('privacyModal');
+const backdrop=document.getElementById('modalBackdrop');
+const openBtn=document.getElementById('privacyOpen');
+const closeBtn=document.getElementById('closeModal');
+
+function showModal(){
+backdrop.style.display='block';
+modal.style.display='block';
+}
+function hideModal(){
+backdrop.style.display='none';
+modal.style.display='none';
+}
+openBtn.addEventListener('click', showModal);
+closeBtn.addEventListener('click', hideModal);
+backdrop.addEventListener('click', hideModal);
+document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
