--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@ object-position:center center;
 <div>
 <h1>Maycon Barboza</h1>
 <div class="lead">
-Psicólogo, Psicanalista e Educador Clínico — Clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.
+Psicólogo, Psicanalista, Sexólogo e Educador — Saúde mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
 </div>
 <div class="meta">
-CRP 01/21617 · Atendimento presencial e online · +14.000 atendimentos
+CRP 01/21617 · Atendimento Online. +14.000 atendimentos
 </div>
 
 <div class="badges">
@@ -372,6 +372,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
