--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
-<meta name="description" content="Maycon Barboza — atendimento clínico desde 2016. Formação em psicanálise clínica.">
+<meta name="description" content="Maycon Barboza — atendimento clínico desde 2016, com foco em vínculos, transtornos de humor e sexualidade.">
 <style>
 :root{
 --bg:#f6f2ec;
@@ -32,15 +32,6 @@ display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center;
 .lead{margin-top:10px;font-size:1.02rem}
 .meta{margin-top:12px;font-size:0.98rem}
 
-.badges{
-margin-top:18px;display:flex;justify-content:center;gap:12px;flex-wrap:wrap;
-}
-.badge{
-padding:10px 16px;border-radius:999px;background:rgba(31,91,122,0.10);
-color:var(--primary);font-weight:700;border:1px solid rgba(31,91,122,0.18);
-font-size:0.95rem;letter-spacing:.2px;box-shadow:0 2px 6px rgba(31,91,122,0.08);
-}
-
 .hero-photo{
 width:100%;height:60vh;max-height:640px;border-radius:12px;
 object-fit:cover;object-position:center top;
@@ -48,7 +39,7 @@ box-shadow:0 12px 30px rgba(0,0,0,0.08);
 }
 
 /* SEÇÕES ------------------------------------------------ */
-.section{margin-top:22px}
+.section{margin-top:18px}
 h2{color:var(--primary);margin:0 0 8px;font-size:1.12rem}
 
 .two-col{display:flex;gap:20px;align-items:flex-start}
@@ -152,16 +143,10 @@ object-position:center center;
 <div>
 <h1>Maycon Barboza</h1>
 <div class="lead">
-Psicólogo, Psicanalista, Sexólogo e Educador — Saúde mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
+Psicólogo, Psicanalista, Sexólogo e Educador Clínico — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
 </div>
 <div class="meta">
-CRP 01/21617 · Atendimento Online. +14.000 atendimentos
-</div>
-
-<div class="badges">
-<span class="badge">Psicanálise Clínica</span>
-<span class="badge">Hipnoterapia</span>
-<span class="badge">Supervisão Clínica</span>
+CRP 01/21617 · Atendimento online· +14.000 atendimentos
 </div>
 </div>
 <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
@@ -171,7 +156,10 @@ CRP 01/21617 · Atendimento Online. +14.000 atendimentos
 <section class="section">
 <h2>Quem é Maycon</h2>
 <p class="muted">
-<strong>Brasiliense. Pai. Estudioso.</strong> Atua na clínica desde 2016 em vínculos, sexualidade, lutos e transtornos de humor, integrando rigor teórico e sensibilidade clínica.
+<strong>Brasiliense, pai, determinado e sonhador.</strong> Formado em Psicologia pelo IESB, Maycon construiu sua trajetória combinando estudo intenso, experiência clínica e envolvimento constante com a formação de novos profissionais. Especialista em psicanálise clínica, sexualidade humana, transtornos de humor e transtorno bipolar, atua também com hipnoterapia e outras abordagens integrativas.
+</p>
+<p class="muted">
+Desde 2016, realizou mais de 14 mil atendimentos em diferentes contextos, acolhendo pessoas em sofrimento emocional, casais em crise, famílias em conflito e profissionais em supervisão. É presença ativa nas redes sociais pelo perfil <strong>@terapeutamaycon</strong>, onde compartilha reflexões sobre vínculos, sofrimento psíquico e saúde mental de forma ética, acessível e responsável.
 </p>
 </section>
 
@@ -180,13 +168,19 @@ CRP 01/21617 · Atendimento Online. +14.000 atendimentos
 <div>
 <h2>Como trabalha</h2>
 <p class="muted">
-Escuta profunda, ética e singular. Integra técnicas como hipnoterapia quando clinicamente indicado, sempre respeitando o tempo e a história de cada pessoa.
+O trabalho clínico de Maycon é sustentado por uma escuta psicanalítica profunda, aliada a uma postura ética e realista. Cada paciente é recebido como alguém único — com história, tempo e limites próprios — e não como um “caso” a ser encaixado em rótulos prontos.
+</p>
+<p class="muted">
+Quando necessário, integra recursos como hipnoterapia, intervenções breves, orientação psicoeducativa e supervisão de rede de apoio, sempre avaliando o que faz sentido para aquela pessoa naquele momento. As principais demandas atendidas envolvem vínculos afetivos, solidão, transtornos de humor, lutos, sexualidade, conflitos familiares, questões de identidade e sofrimento relacionado ao trabalho.
+</p>
+<p class="muted">
+O objetivo não é apenas aliviar sintomas, mas favorecer mudanças estruturais: compreender repetições, nomear o que dói, elaborar experiências e construir novas formas de se relacionar consigo, com o outro e com o mundo.
 </p>
 </div>
 <img id="sideImg" class="side-photo" src="" alt="Maycon em contexto clínico">
 </section>
 
-<!-- MODALIDADES DE ATENDIMENTO (CATÁLOGO) -->
+<!-- MODALIDADES DE ATENDIMENTO -->
 <section class="section">
 <h2>Modalidades de atendimento</h2>
 <p class="muted">Conheça as principais formas de cuidado disponíveis. Os valores não aparecem aqui — o foco é você entender como cada modalidade funciona.</p>
@@ -266,7 +260,7 @@ Escuta profunda, ética e singular. Integra técnicas como hipnoterapia quando c
 </div>
 </section>
 
-<!-- E-BOOK (AGORA SÓ LINK) -->
+<!-- E-BOOK (só link) -->
 <section class="section">
 <h2>E-book da Formação</h2>
 <p class="muted">
@@ -278,7 +272,7 @@ Visão geral da formação livre em Psicanálise Clínica (39 meses — Institut
 </a>
 </div>
 <div class="ebook-note">
-Se preferir, você pode salvar o arquivo no seu dispositivo para ler com conforto.
+Se preferir, você pode salvar o arquivo no seu dispositivo para ler com mais calma.
 </div>
 </section>
 
@@ -372,7 +366,4 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
-
-
-
 
