--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
+<title>Maycon Barboza — Psicólogo, Psicanalista Sexólogo & Educador</title>
 <meta name="description" content="Maycon Barboza — atendimento clínico desde 2016, com foco em vínculos, transtornos de humor e sexualidade.">
 <style>
 :root{
@@ -143,7 +143,7 @@ object-position:center center;
 <div>
 <h1>Maycon Barboza</h1>
 <div class="lead">
-Psicólogo, Psicanalista, Sexólogo e Educador Clínico — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
+Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
 </div>
 <div class="meta">
 CRP 01/21617 · Atendimento online· +14.000 atendimentos
@@ -366,4 +366,5 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
