--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 --radius:12px;
 --maxw:1120px;
 --serif:"Georgia","Times New Roman",serif;
+  <a href="https://instagram.com/terapeutamaycon" target="_blank" class="instagram-btn">
+<i>📎</i> Abrir Instagram
+</a>
+
 }
 *{box-sizing:border-box}
 html{font-size:19px}
@@ -366,5 +370,6 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
