--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@ CRP 01/21617 · Atendimento online· +14.000 atendimentos
 </p>
 <p class="muted">
 Desde 2016, realizou mais de 14 mil atendimentos em diferentes contextos, acolhendo pessoas em sofrimento emocional, casais em crise, famílias em conflito e profissionais em supervisão. É presença ativa nas redes sociais pelo perfil <strong>@terapeutamaycon</strong>, onde compartilha reflexões sobre vínculos, sofrimento psíquico e saúde mental de forma ética, acessível e responsável.
-</p>
+</p><a href="https://instagram.com/terapeutamaycon" target="_blank" class="instagram-btn">
+<i>📎</i> Abrir Instagram
+</a>
+
 </section>
 
 <!-- COMO TRABALHA + FOTO LATERAL -->
@@ -187,7 +190,7 @@ O objetivo não é apenas aliviar sintomas, mas favorecer mudanças estruturais:
 <!-- MODALIDADES DE ATENDIMENTO -->
 <section class="section">
 <h2>Modalidades de atendimento</h2>
-<p class="muted">Conheça as principais formas de cuidado disponíveis. Os valores não aparecem aqui — o foco é você entender como cada modalidade funciona.</p>
+<p class="muted">Conheça as principais formas de cuidado disponíveis. Para consultar valores converse com a assistente Yara no canto inferior da tela.</p>
 
 <div class="services">
 <details class="service">
@@ -370,6 +373,7 @@ document.addEventListener('keydown', e=>{if(e.key==='Escape') hideModal();});
 </script>
 </body>
 </html>
+
 
 
 
